created class counter-show

--- a/frontend/src/assets/css/menu-item.css
+++ b/frontend/src/assets/css/menu-item.css
@@ -111,6 +111,11 @@ button,
 
   animation-name: badge-hide;
 }
+.counter-show {
+  animation-name: badge-show;
+}
+/* .counter-hide { */
+/* } */
 .cafe-item-buy-button {
   position: absolute !important;
   background-color: var(--accent-color);
