added cursor pointer style to edit btn

--- a/frontend/src/assets/css/order-view.css
+++ b/frontend/src/assets/css/order-view.css
@@ -25,6 +25,7 @@ body .order-overview {
   line-height: 18px;
   font-weight: 500;
   color: var(--accent-color);
+  cursor: pointer;
 }
 .order-item {
   display: none;
