--- a/frontend/src/assets/css/product-item.css
+++ b/frontend/src/assets/css/product-item.css
@@ -43,11 +43,13 @@
 }
 .product-item-title {
   font-weight: 500;
+  color: var(--tg-theme-text-color);
 }
 
 .product-item-price {
   font-weight: 700;
   white-space: nowrap;
+  color: var(--tg-theme-text-color);
 }
 .product-item-price:before {
   display: inline-block;
